Automatically backed up by Learn

--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -27,7 +27,7 @@ body div#wall div.parent div > div#tag-7.slick{
   display:none;
 }
 
-!/#wall .tag-1 { 
+/*#wall .tag-1 { 
   display: none; 
 }
 
